<resources>
    <string name="app_name">Food Runner</string>
    <string name="forget_password"><u>Forgot Password?</u></string>
    <string name="register"><u>Don\'t have an account?Sign up now</u></string>
    <string name="register_name">Enter Your Name(Min. 3 characters)</string>
    <string name="register_email">Email Address</string>
    <string name="register_phone">Mobile Number(10 digits)</string>
    <string name="register_address">Delivery Address</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register_password">Choose a Password(Min. 4 characters)</string>
    <string name="frg_text">Enter your registered mobile number and email below:</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome!</string>
    <string name="navigation_header">All your restaurants at one place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>