<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgetPasswordActivity"
    android:background="@color/primary">
    <ImageView
        android:id="@+id/imgFrgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/food_runner_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/txtFrgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frg_text"
        android:layout_below="@+id/imgFrgLogo"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/etFrgMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtFrgText"
        android:background="@drawable/rounded_edittext"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:padding="7dp"
        android:hint="@string/mobile_number_10_digits"/>
    <EditText
        android:id="@+id/etFrgEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etFrgMobile"
        android:background="@drawable/rounded_edittext"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:padding="7dp"
        android:hint="@string/email_address"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="@string/next"
        android:layout_below="@+id/etFrgEmail"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="7dp"
        android:textSize="15sp"
        android:textStyle="bold"/>
</RelativeLayout>